--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,108 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.d-flex {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+}
+
+.j-center {
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.a-center {
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.j-end {
+  justify-content: end;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.space-btw {
+  justify-content: space-between;
+}
+
+.f-column {
+  flex-direction: column;
+}
+
+.f-wrap {
+  flex-wrap: wrap;
+}
+
+.grow1 {
+  flex: 1;
+}
+
+.grow2 {
+  flex: 2;
+}
+
+.grow3 {
+  flex: 3;
+}
+
+.grow4 {
+  flex: 4;
+}
+
+.p50 {
+  padding: 50px;
+}
+
+.p5 {
+  padding: 5px;
+}
+
+.pt50 {
+  padding-top: 50px;
+}
+
+.mt20 {
+  margin-top: 20px;
+}
+
+a {
+  margin: 10px;
+}
+
+img {
+  height: 200px;
+}
+.container{
+  width: 500px;
+  height: 100px;
+}
+.box{
+  width: 50px;
+  height: 50px;
+  border: 1px black solid;
+}
+button{
+  margin: 5px
+}
+.chatbox{
+  width: 500px;
+  height: 300px;
+  border: 1px black solid;
+  overflow: scroll;
+}
+.userbox{
+  width: 500px;
+  height: 50px;
+  border: 1px black solid;
+
+}
+.selected {
+
+  background-color: lightcyan
+}
+.messagebox{
+  width: 500px;
+  height: 120px;
+  border: 1px black solid;
+
+}
+
+
+h6{
+
+  margin-block-start: 5px;
+    margin-block-end: 5px;
+    margin-left: 10px;
 }
